style.css
*{
    margin: 0;
    padding: 0;
}
body{
    background-color: #F2EFEB;
}
.navbar{
    height: 90px;
    width: 100%;
    padding: auto;
}
.card-body{
    background-color: #F8F6F4;
    
}
.card{
    margin: 10px;
}
.row{
    width: 1300px;
    margin-left: 70px;
}
.container {
    margin-left: 0;
    
    margin-right: 0;
    
}

/*.col{
    width: 40rem;
}
.row{
    margin-left: 0;
    margin-right: 0;
    width: 100%;
}
.container {
    margin-left: 0;
    padding-left: 0;
    margin-right: 0;
    width: 100%;
}*/
/* Custom CSS to add equal margin between columns */
/* Custom CSS to add equal margin between columns */

